[package]
name = "bevy_callback"
version = "0.1.0"
edition = "2024"

[features]
default = [ "app", "debug" ]
app     = [ "dep:bevy_app" ]
debug   = [ "bevy_utils/debug" ]

[lints.rust]
unused_parens = "allow"


[dependencies.bevy_app]
version          = "0.17"
default-features = false
optional         = true

[dependencies.bevy_ecs]
version          = "0.17"
default-features = false

[dependencies.bevy_utils]
version          = "0.17"
default-features = false
